# solar

./: .gitignore  Cargo.toml  README.md  build.rs  notes
src/: actor.rs  broker.rs  config.rs  error.rs  main.rs  registry.rs  storage.rs
src/actors/: ctrlc.rs  jsonrpc_server.rs  lan_discovery.rs  landiscovery.rs  mod.rs  muxrpc.rs  peer.rs  sbot.rs  sensor.rs  tcp_server.rs
src/actors/rpc/: blobs.rs  blobs_get.rs  blobs_wants.rs  get.rs  handler.rs  history_stream.rs  mod.rs  whoami.rs
src/actors/rpcs/: base.rs  get.rs  history_stream.rs  mod.rs  whoami.rs
src/storage/: blob.rs  feed.rs  kv.rs  mod.rs
