[package]
name = "solar"
version = "0.2.0"
authors = ["adria0 <adria@codecontext.io>"]
edition = "2018"
default-run = "solar"
build = "build.rs"

[[bin]]
name = "solar"
path = "src/main.rs"

[dependencies]
kuska-ssb = { git =  "https://github.com/Kuska-ssb/ssb", branch = "master" }
async-std = { version = "1", features=["unstable", "attributes"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features=["preserve_order", "arbitrary_precision"] }
serde_cbor = "0.11"
tempdir = "0.3"
log = "0.4"
env_logger = "0.10"
async-ctrlc = "1"
snap = "1"
rand = "0.8"
sled = "0.34"
xdg = "2.4"
base64 = "0.13"
once_cell = "1.16"
async-trait = "0.1"
sha2 = "0.10"
procfs = "0.14"
slice-deque = "0.3"
toml = "0.5"
regex = "1"
structopt = "0.3"
