[package]
name = "solar"
version = "0.2.0"
authors = ["adria0 <adria@codecontext.io>"]
edition = "2018"
default-run = "solar"
build = "build.rs"

[[bin]]
name = "solar"
path = "src/main.rs"

[dependencies]
async-ctrlc = "1"
async-std = { version = "1", features=["unstable", "attributes"] }
async-trait = "0.1"
base64 = "0.13"
env_logger = "0.10"
futures = "0.3"
jsonrpc-ws-server = "18"
kuska-ssb = { git =  "https://github.com/Kuska-ssb/ssb", branch = "master" }
log = "0.4"
once_cell = "1.16"
procfs = "0.14"
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_json = { version = "1", features=["preserve_order", "arbitrary_precision"] }
sha2 = "0.10"
sled = "0.34"
slice-deque = "0.3"
snap = "1"
structopt = "0.3"
tempdir = "0.3"
toml = "0.5"
xdg = "2.4"
